--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{app.request.locale}}">
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Welcome!
+			{% block title %}Panterest
 			{% endblock %}
 		</title>
+
 		<link
 		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
+
+
 		{% endblock %}
 
 		{% block javascripts %}
+
 			{{ encore_entry_script_tags('app') }}
 		{% endblock %}
 	</head>
 	<body>
+		{% include "partials/_flashes.html.twig" %}
+
 		<nav>
-			<ul>
-				<li>
-					<a href="{{path('app_home')}}">Home</a>
-					<a href="{{path('pins_create')}}">New Pin</a>
-				</li>
-
-			</ul>
-
+			{% include "partials/_nav.html.twig" %}
 		</nav>
-		{% block body %}{% endblock %}
-	</body>
-</html>
+
+		<main class="container"> {% block body %}{% endblock %}
+			</main>
+
+			{% include "partials/_footer.html.twig" %}
+		</body>
+	</html>
