--- a/templates/pins/create.html.twig
+++ b/templates/pins/create.html.twig
@@ -2,12 +2,15 @@
 
 {% block title 'New Pin' %}
 {% block body %}
-	<h1>Create Pin</h1>
-	{{form_start(form)}}
 
-	{{form_widget(form)}}
-	<input type="submit" value="Create Pin" formnovalidate>
+	<div class="row">
+		<div class="col-md-6 mx-auto">
+			<h1>Create Pin</h1>
 
-	{{ form_end(form)}}
+			{% include "pins/_form.html.twig" %}
+		</div>
+
+	</div>
+
 
 {% endblock %}
