--- a/templates/pins/edit.html.twig
+++ b/templates/pins/edit.html.twig
@@ -2,14 +2,14 @@
 
 {% block title 'Edit Pin #' ~ pin.id %}
 {% block body %}
-	<h1>Edit Pin #
-		{{ pin.id }}</h1>
+	<div class="row">
+		<div class="col-md-6 mx-auto">
 
-	{{form_start(form)}}
+			<h1>Edit Pin #
+				{{ pin.id }}</h1>
 
-	{{form_widget(form)}}
-	<input type="submit" value="Update Pin" formnovalidate>
+			{% include "pins/_form.html.twig" with {'submitButtonText':'Update Pin'} %}
 
-	{{ form_end(form)}}
-
+		</div>
+	</div>
 {% endblock %}
