--- a/templates/pins/show.html.twig
+++ b/templates/pins/show.html.twig
@@ -8,13 +8,10 @@
 		<P>{{pin.description}}</P>
 	</article>
 	<a href="{{path('pins_edit', {id:pin.id})}}">Edit</a>|
-	<a href="#" onclick="event.preventDefault(); confirm('Are you sure?') && document.getElementById('js-pin-delete-form').submit();">Delete</a>
-
+	<a href="#" onclick="event.preventDefault(); confirm('Are you sure') && document.getElementById('js-pin-delete-form').submit();">Delete</a>
 	<form id="js-pin-delete-form" action="{{ path('pins_delete', {id:pin.id})}}" method="post" style="display:none;">
-		<input type="hidden" value="{{ csrf_token('pins_deletion' ~ pin.id)}}">
+		<input type="hidden" name="csrf_token" value="{{csrf_token('pin' ~ pin.id)}}">
 		<input type="hidden" name="_method" value="DELETE">
 
 	</form>
-
-
 {% endblock %}
