--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -25,3 +25,21 @@ body {
     background-color: blue;
   }
 }
+
+.vich-image .form-check {
+  @extend .mt-3;
+}
+
+.vich-image img {
+  @extend .mb-2;
+  @extend .rounded;
+  @extend .shadow;
+  @extend .img-thumbnail;
+}
+
+.pin img {
+  transition: transform 0.3 ease-out;
+  &:hover {
+    transform: scale(1.075);
+  }
+}
