--- a/templates/pins/index.html.twig
+++ b/templates/pins/index.html.twig
@@ -3,17 +3,42 @@
 {% block title 'Panterest' %}
 
 {% block body %}
-	<h1>{{ pluralize(pins|length, 'Pin')}}</h1>
 
-	{% for pin in pins %}
-		<article>
-			<h2>
-				<a href="{{ path('pins_show', {id: pin.id})}}">{{pin.title}}</a>
-			</h2>
-			<p>{{pin.description|u.truncate(10,'...', false)}}</p>
-			<p>Submitted|
-				{{ pin.createdAt|ago}}</p>
-		</article>
+	{% if pins|length > 0 %}
 
-	{% endfor %}
+		<h1 class="mb-3 text-center text-muted">{{ pluralize(pins|length, 'Pin')}}</h1>
+		{% for row  in pins|batch(3) %}
+			<div class="row mb-5">
+
+				{% for pin in row %}
+					<div class="col-md-4">
+						<article class="pin bg-white rounded shadow">
+							<div class="mw-100 overflow-hidden">
+
+								<a href="{{ path('pins_show', {id: pin.id})}}">
+									<img src="{{ (pin.imageName ? vich_uploader_asset(pin) : asset('build/images/placeholder.png')) | imagine_filter('squared_thumbnail_medium') }}" alt="{{ pin.title }}" class="w-100 rounded-top">
+								</a>
+							</div>
+							<h2 class="ps-3 pt-3 h5">
+								<a href="{{ path('pins_show', {id: pin.id})}}" class="text-secondary text-decoration-none">{{pin.title}}</a>
+							</h2>
+
+							<p class="pl-3 pb-3 text-muted">
+								<small>
+									Submitted [owner full name]</small>
+							</p>
+						</article>
+
+					</div>
+
+
+				{% endfor %}
+			</div>
+		{% endfor %}
+	{% else %}
+
+		<p class="h1 mt-5 text-center">No pins yet.
+			<a href="{{path('pins_create')}}">Be the first!</a>
+		</p>
+	{% endif %}
 {% endblock %}
