--- a/templates/pins/show.html.twig
+++ b/templates/pins/show.html.twig
@@ -3,15 +3,41 @@
 {% block title 'Find all the best pins on earth' %}
 
 {% block body %}
-	<article>
-		<h2>{{ pin.title}}</h2>
-		<P>{{pin.description}}</P>
-	</article>
-	<a href="{{path('pins_edit', {id:pin.id})}}">Edit</a>|
-	<a href="#" onclick="event.preventDefault(); confirm('Are you sure') && document.getElementById('js-pin-delete-form').submit();">Delete</a>
-	<form id="js-pin-delete-form" action="{{ path('pins_delete', {id:pin.id})}}" method="post" style="display:none;">
-		<input type="hidden" name="csrf_token" value="{{csrf_token('pin' ~ pin.id)}}">
-		<input type="hidden" name="_method" value="DELETE">
+	<div class="row">
+		<div class="col-md-6 mx-auto">
+			<article class="pin bg-white rounded shadow">
+				<div class="mw-100 overflow-hidden">
 
-	</form>
+					<a href="{{ path('pins_show', {id: pin.id})}}">
+						<img src="{{ (pin.imageName ? vich_uploader_asset(pin) : asset('build/images/placeholder.png')) | imagine_filter('squared_thumbnail_medium') }}" alt="{{ pin.title }}" class="w-100 rounded-top">
+					</a>
+				</div>
+				<h2 class="ps-3 pt-3 h5">
+					<a href="{{ path('pins_show', {id: pin.id})}}" class="text-secondary text-decoration-none">{{pin.title}}</a>
+				</h2>
+				<p class="pl-3 pb-3 text-muted">
+					<small>
+						Submitted
+						<time datetime="{{ pin.createdAt| date('y-m-d H:i:s')}}">
+							{{pin.createdAt|ago }}</time>
+						by [owner full name]</small>
+				</p>
+
+				<p class="ps-3 pb-3">
+					{{pin.description}}
+				</p>
+				<div class="ps-3 pb-3">
+
+					<a href="{{path('pins_edit', {id:pin.id})}}" class="btn btn-light">Edit</a>
+					<a href="#" onclick="event.preventDefault(); confirm('Are you sure') && document.getElementById('js-pin-delete-form').submit();" class="btn btn-light">Delete</a>
+					<form id="js-pin-delete-form" action="{{ path('pins_delete', {id:pin.id})}}" method="post" style="display:none;">
+						<input type="hidden" name="csrf_token" value="{{csrf_token('pin' ~ pin.id)}}">
+						<input type="hidden" name="_method" value="DELETE">
+
+					</form>
+				</div>
+			</article>
+		</div>
+	</div>
+
 {% endblock %}
