--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -7,16 +7,28 @@
 
 		<div class="collapse navbar-collapse" id="navbarsExample03">
 			<ul class="navbar-nav ms-auto">
-				<li class="nav-item">
-					<a class="nav-link" aria-current="page" href="{{path('pins_create')}}">New Pin</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Account</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Logout</a>
-				</li>
+				{% if app.user %}
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="{{path('pins_create')}}">New Pin</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{path('app_account')}}">Account</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#" onclick="event.preventDefault(); document.getElementById('js-logout-form').submit();">Logout</a>
+					</li>
+					<form id="js-logout-form" action="{{path('app_logout')}}" method="POST" style="display: none;">
+						<input type="hidden" name="_csrf_token" value="{{csrf_token('logout')}}">
+					</form>
+				{% else %}
 
+					<li class="nav-item">
+						<a class="nav-link" href="{{path('app_register')}}">Register</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{path('app_login')}}">Login</a>
+					</li>
+				{% endif %}
 			</ul>
 		</li>
 	</ul>
