--- a/templates/pins/show.html.twig
+++ b/templates/pins/show.html.twig
@@ -6,35 +6,40 @@
 	<div class="row">
 		<div class="col-md-6 mx-auto">
 			<article class="pin bg-white rounded shadow">
-				<div class="mw-100 overflow-hidden">
+				<div class="mw-100 rounded-top overflow-hidden">
 
-					<a href="{{ path('pins_show', {id: pin.id})}}">
-						<img src="{{ (pin.imageName ? vich_uploader_asset(pin) : asset('build/images/placeholder.png')) | imagine_filter('squared_thumbnail_medium') }}" alt="{{ pin.title }}" class="w-100 rounded-top">
-					</a>
+
+					<img src="{{ (pin.imageName ? vich_uploader_asset(pin) : asset('build/images/placeholder.png')) | imagine_filter('squared_thumbnail_medium') }}" alt="{{ pin.title }}" class="w-100 rounded-top">
+
 				</div>
-				<h2 class="ps-3 pt-3 h5">
-					<a href="{{ path('pins_show', {id: pin.id})}}" class="text-secondary text-decoration-none">{{pin.title}}</a>
-				</h2>
-				<p class="pl-3 pb-3 text-muted">
-					<small>
-						Submitted
-						<time datetime="{{ pin.createdAt| date('y-m-d H:i:s')}}">
-							{{pin.createdAt|ago }}</time>
-						by [owner full name]</small>
-				</p>
+				<div class="p-3">
+					<h1 class="h5 text-secondary">
+						{{pin.title}}
+					</h1>
+					<p class="text-muted">
+						<small>
+							Submitted
+							<time datetime="{{ pin.createdAt| date('y-m-d H:i:s')}}">
+								{{pin.createdAt|ago }}</time>
+							by
+							{{ pin.user.fullName}}
+							}</small>
+					</p>
 
-				<p class="ps-3 pb-3">
-					{{pin.description}}
-				</p>
-				<div class="ps-3 pb-3">
+					<p class="p-3">
+						{{pin.description}}
+					</p>
 
-					<a href="{{path('pins_edit', {id:pin.id})}}" class="btn btn-light">Edit</a>
-					<a href="#" onclick="event.preventDefault(); confirm('Are you sure') && document.getElementById('js-pin-delete-form').submit();" class="btn btn-light">Delete</a>
-					<form id="js-pin-delete-form" action="{{ path('pins_delete', {id:pin.id})}}" method="post" style="display:none;">
-						<input type="hidden" name="csrf_token" value="{{csrf_token('pin' ~ pin.id)}}">
-						<input type="hidden" name="_method" value="DELETE">
+					<div class="pt-3">
 
-					</form>
+						<a href="{{path('pins_edit', {id:pin.id})}}" class="btn btn-light">Edit</a>
+						<a href="#" onclick="event.preventDefault(); confirm('Are you sure') && document.getElementById('js-pin-delete-form').submit();" class="btn btn-light">Delete</a>
+						<form id="js-pin-delete-form" action="{{ path('pins_delete', {id:pin.id})}}" method="post" style="display:none;">
+							<input type="hidden" name="csrf_token" value="{{csrf_token('pin' ~ pin.id)}}">
+							<input type="hidden" name="_method" value="DELETE">
+
+						</form>
+					</div>
 				</div>
 			</article>
 		</div>
