--- a/templates/account/show.html.twig
+++ b/templates/account/show.html.twig
@@ -8,7 +8,7 @@
 
 
 			<h1 class="my-5">Profile</h1>
-			<img src="{{app.user.gravatar()}}" alt="{{app.user.fullName}}'s Avatar" class="shadow rounded-circle">
+			<img src="{{app.user.getGravatarUrl()}}" alt="{{app.user.fullName}}'s Avatar" class="shadow rounded-circle">
 
 			<p class="mt-5 lead">{{app.user.email}}</p>
 			<hr>
