--- a/templates/pins/show.html.twig
+++ b/templates/pins/show.html.twig
@@ -29,17 +29,18 @@
 					<p class="p-3">
 						{{pin.description}}
 					</p>
+					{% if app.user == pin.user %}
+						<div class="pt-3">
 
-					<div class="pt-3">
+							<a href="{{path('pins_edit', {id:pin.id})}}" class="btn btn-light">Edit</a>
+							<a href="#" onclick="event.preventDefault(); confirm('Are you sure') && document.getElementById('js-pin-delete-form').submit();" class="btn btn-light">Delete</a>
+							<form id="js-pin-delete-form" action="{{ path('pins_delete', {id:pin.id})}}" method="post" style="display:none;">
+								<input type="hidden" name="csrf_token" value="{{csrf_token('pin' ~ pin.id)}}">
+								<input type="hidden" name="_method" value="DELETE">
 
-						<a href="{{path('pins_edit', {id:pin.id})}}" class="btn btn-light">Edit</a>
-						<a href="#" onclick="event.preventDefault(); confirm('Are you sure') && document.getElementById('js-pin-delete-form').submit();" class="btn btn-light">Delete</a>
-						<form id="js-pin-delete-form" action="{{ path('pins_delete', {id:pin.id})}}" method="post" style="display:none;">
-							<input type="hidden" name="csrf_token" value="{{csrf_token('pin' ~ pin.id)}}">
-							<input type="hidden" name="_method" value="DELETE">
-
-						</form>
-					</div>
+							</form>
+						</div>
+					{% endif %}
 				</div>
 			</article>
 		</div>
